...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserHeadingVerifySettings"
        style="@style/SecondaryHeadingStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/portrait_regular_margin"
        app:layout_constraintBottom_toTopOf="@+id/mcvVerifyDetails"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginTop="@dimen/portrait_secondary_margin"
        android:layout_marginEnd="@dimen/portrait_label_field_margin"
        android:layout_marginBottom="@dimen/portrait_secondary_margin"
        android:text="@string/username_of_user_label"
        app:layout_constraintBottom_toTopOf="@+id/tvVerificationStatusLabelVerify"
        app:layout_constraintEnd_toStartOf="@+id/tvUsernameVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mcvVerifyDetails" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUsernameVerify"
        style="@style/TextViewStyle"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginEnd="@dimen/portrait_label_field_margin"
        android:layout_marginBottom="@dimen/portrait_secondary_margin"
        android:text="@string/verification_status_label"
        app:layout_constraintBottom_toTopOf="@+id/tvLastSyncTimeLabelVerify"
        app:layout_constraintEnd_toStartOf="@+id/tvVerificationStatusVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsernameLabelVerify" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvVerificationStatusVerify"
        style="@style/TextViewStyle"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/portrait_regular_margin"
        android:layout_marginEnd="@dimen/portrait_label_field_margin"
        android:layout_marginBottom="@dimen/portrait_secondary_margin"
        android:text="@string/last_synced_time"
        app:layout_constraintBottom_toTopOf="@+id/btnStartVerifyUser"
        app:layout_constraintEnd_toStartOf="@+id/tvLastSyncTimeVerify"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvVerificationStatusLabelVerify" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLastSyncTimeVerify"
        style="@style/SmallTextViewStyle"
...
